Add @equalsAndHashCode lazy CacheStrategy